docs/src/styles/docs/algolia.scss
.docs-header {
  .DocSearch-Button {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    border-radius: var(--amplify-components-button-border-radius);
    box-sizing: border-box;
    font-weight: 500;
    transition: all var(--amplify-components-button-transition-duration);
    background-color: inherit;
    border-width: var(--amplify-components-button-border-width);
    border-style: var(--amplify-components-button-border-style);
    border-color: var(--amplify-colors-font-secondary);
    border-radius: var(--amplify-components-button-border-radius);
    color: var(--amplify-colors-font-secondary);
    font-size: var(--amplify-components-button-font-size);
    line-height: var(--amplify-components-button-line-height);
    padding-block-start: var(--amplify-components-button-padding-block-start);
    padding-block-end: var(--amplify-components-button-padding-block-end);
    padding-inline-start: var(--amplify-components-button-padding-inline-start);
    padding-inline-end: var(--amplify-components-button-padding-inline-end);
    user-select: none;
    // all:unset removes this, so we have to add it back.
    cursor: pointer;

    &:hover {
      background: var(--amplify-components-button-hover-background-color);
      border-color: var(--amplify-components-button-hover-border-color);
      color: var(--amplify-components-button-hover-color);
      box-shadow: none;
    }

    :focus {
      background-color: var(--amplify-components-button-hover-background-color);
      border-color: var(--amplify-components-button-focus-border-color);
      color: var(--amplify-components-button-focus-color);
      box-shadow: var(--amplify-components-button-focus-box-shadow);
    }

    .DocSearch-Search-Icon {
      color: inherit;
    }
  }

  .DocSearch-Button-Key {
    background: inherit;
    color: inherit;
  }
}

// Modal
.DocSearch-Container .DocSearch-Modal {
  background: var(--amplify-colors-background-secondary);
  color: var(--amplify-colors-font-primary);

  .DocSearch-Hit-source {
    background: var(--amplify-colors-background-secondary);
  }

  .DocSearch-Input {
    color: inherit;
  }

  .DocSearch-MagnifierLabel,
  .DocSearch-Hit-source,
  .DocSearch-Hits mark,
  .DocSearch-Logo svg {
    color: var(--amplify-colors-brand-primary-60);
  }

  .DocSearch-Form {
    box-shadow: inset 0 0 0 2px var(--amplify-colors-brand-primary-60);
    background: var(--amplify-colors-background-secondary);
  }

  .DocSearch-Hit-Container {
    color: var(--amplify-colors-font-primary);
  }

  .DocSearch-Hit a {
    background: var(--amplify-colors-background-primary);
  }

  .DocSearch-Hit[aria-selected='true'] a {
    background-color: var(--amplify-colors-brand-primary-60);
  }

  .DocSearch-Footer {
    background: var(--amplify-colors-background-primary);
  }

  .DocSearch-Commands-Key {
    background: inherit;
    box-shadow: inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff,
      0 1px 2px 1px var(--amplify-colors-shadow-primary);
  }
}

